<resources>
    <string name="app_name">helloAndroid</string>
    <string name="login_title">登录页面</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="man">MAN</string>
    <string name="woman">WOMAN</string>
    <string name="check_gender">Check Gender</string>
    <string name="submit">Submit</string>
    <string name="scroll_top">Scroll Top</string>
    <string name="scroll_bottom">Scroll Bottom</string>
    <string-array name="data">
        <item>英勇青铜</item>
        <item>不屈白银</item>
        <item>荣耀黄金</item>
        <item>华贵铂金</item>
        <item>璀璨钻石</item>
        <item>超凡大师</item>
        <item>最强王者</item>
    </string-array>
    <string name="spin_title">分段选择</string>
    <string name="event_button">按钮</string>
    <string name="popupwindow">显示PopupWindow</string>
</resources>