<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/checkbox001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <CheckBox
        android:id="@+id/checkbox002"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <CheckBox
        android:id="@+id/checkbox003"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/woman" />

    <CheckBox
        android:id="@+id/checkbox004"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/man" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/submit" />
</LinearLayout>